<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_common"
    android:orientation="vertical" >

    <!-- 顶部条 -->

    <include layout="@layout/header_write" />

    <TextView
        android:id="@+id/current_account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15.0dip"
        style="@style/simple_textView"
        android:text="@string/current_account" />

    <RelativeLayout
        android:id="@+id/div"
        android:layout_width="fill_parent"
        android:layout_height="152.0dip"
        android:layout_margin="15.0dip"
        android:background="@drawable/panel_bg"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/current_password"
            style="@style/simple_editText"
            android:hint="@string/current_password"
            android:inputType="textPassword" />

        <View
            android:id="@+id/view_1"
            style="@style/hr"
            android:layout_below="@+id/current_password" >
        </View>

        <EditText
            android:id="@+id/new_password"
            style="@style/simple_editText"
            android:layout_below="@+id/view_1"
            android:hint="@string/new_password"
            android:inputType="textPassword" />

        <View
            android:id="@+id/view_2"
            style="@style/hr"
            android:layout_below="@+id/new_password" >
        </View>

        <EditText
            android:id="@+id/new_password_again"
            style="@style/simple_editText"
            android:layout_below="@+id/view_2"
            android:hint="@string/new_password_again"
            android:inputType="textPassword" />
    </RelativeLayout>

</LinearLayout>