<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_common"
    android:orientation="vertical" >

    <include layout="@layout/header_pre_next" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_margin="15.0dip"
            android:background="@drawable/panel_bg" >

            <RelativeLayout
                android:id="@+id/people_limit_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/people_limit_hint"
                    style="@style/hint_textView"
                    android:layout_alignParentLeft="true"
                    android:paddingTop="15dip"
                    android:text="@string/input_people_limit" />

                <TextView
                    android:id="@+id/people_limit"
                    style="@style/hint_textView"
                    android:layout_alignLeft="@+id/people_limit_hint"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="70dp" />

            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_below="@+id/relativeLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/people_limit_no"
                style="@style/blue_button"
                android:layout_weight="0.25"
                android:text="@string/people_limit_no"
                android:textStyle="normal" />

            <Button
                android:id="@+id/people_limit_ten"
                style="@style/blue_button"
                android:layout_weight="0.25"
                android:text="@string/people_limit_ten"
                android:textStyle="normal" />

            <Button
                android:id="@+id/people_limit_twenty"
                style="@style/blue_button"
                android:layout_weight="0.25"
                android:text="@string/people_limit_twenty"
                android:textStyle="normal" />

            <Button
                android:id="@+id/people_limit_fifty"
                style="@style/blue_button"
                android:layout_weight="0.25"
                android:text="@string/people_limit_fifty"
                android:textStyle="normal" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>