<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_common"
    android:orientation="vertical" >

    <!-- 顶部条 -->

    <include layout="@layout/header_write" />

    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:orientation="vertical" 
        android:layout_height="203.0dip"
        android:layout_margin="15.0dip"
        android:background="@drawable/panel_bg" >
<!-- 
        <EditText
            android:id="@+id/account_edit"
            style="@style/simple_editText"
            android:hint="@string/input_account"
            android:inputType="text" />

        <View
            android:id="@+id/view_1"
            style="@style/hr"
            android:layout_below="@+id/account_edit" >
        </View>
 -->
        <EditText
            android:id="@+id/nick_edit"
            android:hint="@string/input_nick"
            android:inputType="text"
            style="@style/simple_editText" />
        <View
            android:id="@+id/view_2"
            style="@style/hr"
            android:layout_below="@+id/nick_edit" >
        </View>

        <EditText
            android:id="@+id/email_edit"
            android:layout_below="@+id/view_2"
            android:hint="@string/input_email"
            android:inputType="textEmailAddress"
            style="@style/simple_editText" />

        <View
            android:id="@+id/view_3"
            style="@style/hr"
            android:layout_below="@+id/email_edit" >
        </View>

        <EditText
            android:id="@+id/password_edit"
            android:layout_below="@+id/view_3"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            style="@style/simple_editText" />

        <View
            android:id="@+id/view_4"
            style="@style/hr"
            android:layout_below="@+id/password_edit" >
        </View>

        <EditText
            android:id="@+id/password_confirm_edit"
            android:layout_below="@+id/view_4"
            android:hint="@string/input_password_confirm"
            android:inputType="textPassword" 
            style="@style/simple_editText"/>
    </RelativeLayout>

</LinearLayout>