<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_common"
    android:orientation="vertical" >

    <include layout="@layout/header_pre_next" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="101.0dip"
            android:layout_margin="15.0dip"
            android:background="@drawable/panel_bg" >

            <RelativeLayout
                android:id="@+id/start_time_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/start_time_hint"
                    style="@style/hint_textView"
                    android:layout_alignParentLeft="true"
                    android:paddingTop="15dip"
                    android:text="@string/input_start_time" />

                <TextView
                    android:id="@+id/start_time"
                    style="@style/hint_textView"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="80dp"
                    android:hint="@string/start_time_hint" />
            </RelativeLayout>

            <View
                android:id="@+id/view_1"
                style="@style/hr"
                android:layout_below="@+id/start_time_edit" >
            </View>

            <RelativeLayout
                android:id="@+id/end_time_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_1" >

                <TextView
                    android:id="@+id/end_time_hint"
                    style="@style/hint_textView"
                    android:layout_alignParentLeft="true"
                    android:paddingTop="15dip"
                    android:text="@string/input_end_time" />

                <TextView
                    android:id="@+id/end_time"
                    style="@style/hint_textView"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="80dp"
                    android:hint="@string/end_time_hint" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>