<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_common"
    android:orientation="vertical" >

    <!-- 顶部条 -->
    <include layout="@layout/header_back" />

    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:padding="15dp" >

        <EditText
            android:id="@+id/user_email_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:hint="@string/input_email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <!-- 提示栏 -->

        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:clickable="true"
            android:gravity="bottom"
            android:textColor="#888"
            android:textSize="13dp" />

        <Button
            android:id="@+id/find_password_button"
            style="@style/blue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/user_email_edit"
            android:layout_below="@+id/user_email_edit"
            android:layout_marginTop="14dp"
            android:text="@string/find_password_header" />

        <TextView
            android:id="@+id/register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/find_password_button"
            android:layout_below="@+id/find_password_button"
            android:layout_marginTop="35dp"
            android:text="@string/find_password_point"
            android:textColor="#888"
            android:textColorLink="@color/link_color" />
    </RelativeLayout>

</LinearLayout>